[package]
name = "mizumi-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mizumi_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = {version = "0.25.0"}
spl-token = {version = "3.3.1", features = ["no-entrypoint"]}
